src/test/deca/context/invalid/object/class-nondefinie.deca
// Description :
//  Test utilisation d'une classe non définie.
// Résultats :
//    Erreur : Classe 'UndefinedClass' non définie.
// Historique :
//    créé le 19/01/2025
{
    UndefinedClass obj = new UndefinedClass(); 
}